; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_url.c_svn_client_url_from_path2.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_url.c_svn_client_url_from_path2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_client_url_from_path2(i8** %0, i8* %1, %struct.TYPE_3__* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i8** %0, i8*** %7, align 8
  store i8* %1, i8** %8, align 8
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = call i32 @svn_path_is_url(i8* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %29, label %15

15:                                               ; preds = %5
  %16 = load i8*, i8** %8, align 8
  %17 = load i32*, i32** %11, align 8
  %18 = call i32 @svn_dirent_get_absolute(i8** %8, i8* %16, i32* %17)
  %19 = call i32 @SVN_ERR(i32 %18)
  %20 = load i8**, i8*** %7, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i8*, i8** %8, align 8
  %25 = load i32*, i32** %10, align 8
  %26 = load i32*, i32** %11, align 8
  %27 = call i32 @svn_wc__node_get_url(i8** %20, i32 %23, i8* %24, i32* %25, i32* %26)
  %28 = call i32* @svn_error_trace(i32 %27)
  store i32* %28, i32** %6, align 8
  br label %36

29:                                               ; preds = %5
  %30 = load i8*, i8** %8, align 8
  %31 = load i32*, i32** %10, align 8
  %32 = call i8* @svn_uri_canonicalize(i8* %30, i32* %31)
  %33 = load i8**, i8*** %7, align 8
  store i8* %32, i8** %33, align 8
  br label %34

34:                                               ; preds = %29
  %35 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %35, i32** %6, align 8
  br label %36

36:                                               ; preds = %34, %15
  %37 = load i32*, i32** %6, align 8
  ret i32* %37
}

declare dso_local i32 @svn_path_is_url(i8*) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_dirent_get_absolute(i8**, i8*, i32*) #1

declare dso_local i32* @svn_error_trace(i32) #1

declare dso_local i32 @svn_wc__node_get_url(i8**, i32, i8*, i32*, i32*) #1

declare dso_local i8* @svn_uri_canonicalize(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
